--- a/src/main/resources/application-uat.yml
+++ b/src/main/resources/application-uat.yml
@@ -1,9 +1,9 @@
-DB_URL: jdbc:postgresql://localhost:5432/appointment_service?useUnicode=yes&characterEncoding=UTF-8
+DB_URL: jdbc:postgresql://db:9876/appointment_service?useUnicode=yes&characterEncoding=UTF-8
 DB_USERNAME: postgres
-DB_PASSWORD: admin
+DB_PASSWORD: lawyer@database
 
 server:
-  port: 9211
+  port: 9213
   max-http-request-header-size: 16KB
 
 spring:
