Changes done for the listing of appointments

--- a/src/main/resources/application-uat.yml
+++ b/src/main/resources/application-uat.yml
@@ -44,5 +44,5 @@ jwt:
   expiration: 3600000
 
 service:
-  profile-url: "http://localhost:8081"
+  profile-url: "http://10.255.3.15:9212"
   internal-secret: "abcd1234"
