--- a/src/main/resources/application-uat.yml
+++ b/src/main/resources/application-uat.yml
@@ -44,5 +44,5 @@ jwt:
   expiration: 3600000
 
 service:
-  profile-url: "http://10.255.3.15:9212"
-  internal-secret: "abcd1234"
+  profile-url: "http://localhost:9212"
+  internal-secret: "VMY0qcWu+mDK4o4ggmwZxg=="
