--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+src/main/resources/*firebase*.json
+*.json
+
 ### STS ###
 .apt_generated
 .classpath
