--- a/src/main/resources/application-uat.yml
+++ b/src/main/resources/application-uat.yml
@@ -20,7 +20,7 @@ spring:
     database: POSTGRESQL
     show-sql: false
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: none
     properties:
       hibernate:
         types:
