--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,4 +1,4 @@
-DB_URL: jdbc:postgresql://localhost:5432/appointment_service?useUnicode=yes&characterEncoding=UTF-8
+DB_URL: jdbc:postgresql://localhost:5432/appointment_service1?useUnicode=yes&characterEncoding=UTF-8
 DB_USERNAME: postgres
 DB_PASSWORD: admin
 
@@ -44,6 +44,7 @@ jwt:
   expiration: 3600000
 
 service:
+  auth-url: "http://localhost:8080"
   profile-url: "http://localhost:8081"
   internal-secret: "VMY0qcWu+mDK4o4ggmwZxg=="
 
