Changes done for the logs

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -35,8 +35,12 @@ spring:
     enabled: true
 
 logging:
+  file:
+    name: /var/log/appointment_service/appointment_service.log
   level:
     root: INFO
+  pattern:
+    file: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
 
 # JWT Configuration
 jwt:
@@ -92,7 +96,6 @@ email:
     <p>Regards,<br>
     </body>
     </html>
-
 
 service:
   auth-url: "http://localhost:8080"
